# libvita2d_sys

./: .gitignore  CMakeLists.txt  README.md  exports.yml
include/: heap.h  utils.h  vita2d_sys.h
include/shader/compiled/: clear_f_gxp.h  texture_v_gxp.h
lib/libkernel/: SceLibKernel.yml
libvita2d_sys/: Makefile  libvita2d_sys.vcxproj  libvita2d_sys.vcxproj.filters
libvita2d_sys/include/: async_io.h  fios2ac.h  gim.h  pvr.h  utils.h  vita2d_sys.h
libvita2d_sys/include/shader/compiled/: texture_f_gxp.h
libvita2d_sys/source/: bin_packing_2d.c  int_htab.c  texture_atlas.c  utils.c  vita2d.c  vita2d_draw.c  vita2d_font.c  vita2d_image_bmp.c  vita2d_image_gim.c  vita2d_image_gxt.c  vita2d_image_jpeg.c  vita2d_image_png.c  vita2d_image_png_test.c  vita2d_pgf.c  vita2d_pvf.c  vita2d_sysgraphics.c  vita2d_sysgraphics_old.c  vita2d_texture.c
libvita2d_sys_module/: CMakeLists.txt  exports.yml
libvita2d_sys_module/include/: gim.h  gxt.h  utils.h  vita2d_sys.h
libvita2d_sys_module/include/shader/compiled/: clear_v_gxp.h  color_f_gxp.h  color_v_gxp.h  texture_tint_f_gxp.h
libvita2d_sys_module/source/: bin_packing_2d.c  int_htab.c  utils.c  vita2d.c  vita2d_font.c  vita2d_image_bmp.c  vita2d_image_gim.c  vita2d_image_gxt.c  vita2d_image_jpeg.c  vita2d_image_png.c  vita2d_pgf.c  vita2d_pvf.c  vita2d_sysgraphics.c  vita2d_texture.c
sample/: CMakeLists.txt  main.c
sample/src/: main.c
sample_for_sysgraphics/: CMakeLists.txt
sample_for_sysgraphics/src/: main.c
source/: bin_packing_2d.c  heap.c  int_htab.c  texture_atlas.c  utils.c  vita2d.c  vita2d_image_gim.c  vita2d_image_gxt.c  vita2d_image_jpeg.c  vita2d_image_png.c  vita2d_pgf.c  vita2d_pvf.c  vita2d_texture.c
